--- a/root/people.html
+++ b/root/people.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NCW - People</title>
     <link rel="icon" type="image/x-icon" href="https://cdn.emojidex.com/emoji/seal/spiral.png?1417140038">
-
-    <style>
-      @import url('./base.css');
-      @import url('./basic-grid.css');        
-  </style>
+    <link rel="stylesheet" type="text/css" href="css/base.css">
 </head>
 <body>   
   <section class="basic-grid">
