--- a/root/contact.html
+++ b/root/contact.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" type="text/css" href="css/base.css">
   </head>
   <body>   
+    <nav>
     <section class="basic-grid">
       <a href="/index"><div class="card">⬅️ Back</div></a>
+      <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🎮 Discord</div></a>
+      <div class="card">support📧ncw.fyi</div>
+      <div class="card">media📧ncw.fyi</div>
+      <div class="card">joe📧ncw.fyi</div>
+      <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🦆 The Duck</div></a>
 
     </section>
-
+  </nav>
   </body>
 </html>
 <!--
