--- a/root/resources.html
+++ b/root/resources.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" type="text/css" href="css/base.css">
   </head>
   <body>   
+    <nav>
     <section class="basic-grid">
       <a href="/index.html"><div class="card">⬅️ Back</div></a>
 
     </section>
-
+    </nav>
   </body>
 </html>
 <!--
   
-  This is a comment. There is nothing here https://ncw.fyi/ 
+  This is a comment. There is nothing here https://newcultureworkshop.space/ 
 
 -->
