--- a/root/meet.html
+++ b/root/meet.html
@@ -7,12 +7,13 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.emojidex.com/emoji/seal/spiral.png?1417140038">
     <link rel="stylesheet" type="text/css" href="css/base.css">
   </head>
-  <body>   
+  <body>  
+    <nav> 
     <section class="basic-grid">
       <a href="/index"><div class="card">⬅️ Back</div></a>
 
     </section>
-
+    </nav>
   </body>
 </html>
 <!--
