--- a/root/projects.html
+++ b/root/projects.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" type="text/css" href="css/base.css">
 </head>
 <body>   
+  <nav>
   <section class="basic-grid">
     <a href="/index"><div class="card">⬅️ Back</div></a>
 
   </section>
-
+</nav>
 </body>
 </html>
 <!--
