--- a/root/contact.html
+++ b/root/contact.html
@@ -14,7 +14,7 @@
       <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🎮 Discord</div></a>
       <div class="card">support📧ncw.fyi</div>
       <div class="card">media📧ncw.fyi</div>
-      <div class="card">joe📧ncw.fyi</div>
+      <div class="card">talk📧ncw.fyi</div>
       <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🦆 The Duck</div></a>
 
     </section>
