--- a/root/index.html
+++ b/root/index.html
@@ -18,11 +18,11 @@
     <nav>
       <section class="basic-grid">
         <a href="/meet"><div class="card">🏡 Discord</div></a>
-        <a href="/projects"><div class="card">⋍ projects</div></a>
-        <a href="/people"><div class="card">⚜️⭕ people</div></a>
-        <a href="/resources"><div class="card">∴ resources</div></a>
+        <a href="/projects"><div class="card">🏹 projects</div></a>
+        <a href="/people"><div class="card">⚜️ people</div></a>
+        <a href="/resources"><div class="card">⛏️ resources</div></a>
         <a href="https://newcultureworkshop.video/"target="_blank"><div class="card">📽️ video</div></a>
-        <a href="/contact"><div class="card">⊷ contact</div></a>
+        <a href="/contact"><div class="card">👽 contact</div></a>
       </section>
     </nav>
 
