--- a/root/index.html
+++ b/root/index.html
@@ -17,7 +17,7 @@
 
     <nav>
       <section class="basic-grid">
-        <a href="/meet"><div class="card">🏡 Discord</div></a>
+        <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🏡 Discord</div></a>
         <a href="/projects"><div class="card">🏹 projects</div></a>
         <a href="/people"><div class="card">⚜️ people</div></a>
         <a href="/resources"><div class="card">⛏️ resources</div></a>
