lots of changes

--- a/root/contact.html
+++ b/root/contact.html
@@ -11,7 +11,7 @@
     <nav>
     <section class="basic-grid">
       <a href="/index"><div class="card">⬅️ Back</div></a>
-      <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🏡 Discord</div></a>
+      <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🎮 discord</div></a>
       <div class="card">support📧ncw.fyi</div>
       <div class="card">media📧ncw.fyi</div>
       <div class="card">talk📧ncw.fyi</div>
@@ -21,8 +21,3 @@
   </nav>
   </body>
 </html>
-<!--
-  
-  This is a comment. There is nothing here https://ncw.fyi/ 
-
--->
