--- a/root/index.html
+++ b/root/index.html
@@ -17,7 +17,7 @@
 
     <nav>
       <section class="basic-grid">
-        <a href="https://discord.com/channels/@me/984956875516805170"><div class="card">🏡 Discord</div></a>
+        <a href="https://discord.com/channels/@me/984956875516805170"target="_blank"><div class="card">🎮 discord</div></a>
         <a href="/projects"><div class="card">🏹 projects</div></a>
         <a href="/people"><div class="card">⚜️ people</div></a>
         <a href="/resources"><div class="card">⛏️ resources</div></a>
@@ -25,7 +25,16 @@
         <a href="/contact"><div class="card">👽 contact</div></a>
       </section>
     </nav>
-
+    <div style="text-align: center;">
+      <div style="display: inline-block; text-align: left;">
+          Centered<br />
+          Content<br />
+          That<br />
+          Is<br />
+          Left<br />
+          Aligned
+      </div>
+  </div>
   </body>
 
 </html>
