--- a/root/projects.html
+++ b/root/projects.html
@@ -9,15 +9,37 @@
 </head>
 <body>   
   <nav>
-  <section class="basic-grid">
-    <a href="/index"><div class="card">⬅️ Back</div></a>
-
-  </section>
+    <section class="basic-grid">
+      <a href="https://discord.com/channels/@me/984956875516805170"target="_blank"><div class="card">🎮 discord</div></a>
+      <a href="/projects"><div class="card">🏹 projects</div></a>
+      <a href="/people"><div class="card">⚜️ people</div></a>
+      <a href="/resources"><div class="card">⛏️ resources</div></a>
+      <a href="https://newcultureworkshop.video/"target="_blank"><div class="card">📽️ video</div></a>
+      <a href="/contact"><div class="card">👽 contact</div></a>
+    </section>
 </nav>
+<div style="text-align: center;">
+  <div style="display: inline-block; text-align: left;">
+    <iframe style="overflow:hidden;border:0;margin:0;padding:0;width:50vw;height:30vh;" 
+    src="https://docs.google.com/document/d/e/2PACX-1vSixpCI3qSJrD6FK3hu7L8TNO6jFOOzBnOOx4GeAT8tlfUbUQM-Vhl8I3JCZhvYtMuu3fiZb9sYBMA8/pub?embedded=true"></iframe>
+
+<div style="text-align: center;">
+  <div style="display: inline-block; text-align: left;">
+<section class="thesections">
+  <h1>Note:</h1>
+<p>🗒️ Thinking of putting projects here...</p>
+  <h2>Note:</h2>
+<p>🗒️ Thinking of putting projects here...</p>
+<h3>Note:</h3>
+<p>🗒️ Thinking of putting projects here...</p>
+<h4>Note:</h4>
+<p>🗒️ Thinking of putting projects here...</p>
+<h5>Note:</h5>
+<p>🗒️ Thinking of putting projects here...</6>
+<h6>Note:</h5>
+<p>🗒️ Thinking of putting projects here...</p>
+</section>
+</div>
+</div>
 </body>
 </html>
-<!--
-
-This is a comment. There is nothing here https://ncw.fyi/ 
-
--->
