--- a/root/resources.html
+++ b/root/resources.html
@@ -6,18 +6,36 @@
     <title>NCW - Resources</title>
     <link rel="icon" type="image/x-icon" href="https://cdn.emojidex.com/emoji/seal/spiral.png?1417140038">
     <link rel="stylesheet" type="text/css" href="css/base.css">
+    <link rel="stylesheet" type="text/css" href="css/animated-grid.css">
   </head>
-  <body>   
-    <nav>
-    <section class="basic-grid">
-      <a href="/index.html"><div class="card">⬅️ Back</div></a>
+  <body>  
 
+    <div style="text-align: center;">
+      <div style="display: inline-block; text-align: left;">
+        <h3>NCW - Resources</h3>
+      </div>
+  </div>
+
+  <div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+
+    <section class="animated-grid">
+      <a href="/index"><div class="card">⬅️ Back</div></a>
+      <div class="card">b</div>
+      <div class="card">c</div>
+      <div class="card">d</div>
+      <div class="card">e</div>
+      <div class="card">f</div>
+      <div class="card">g</div>
+      <div class="card">h</div>
+      <div class="card">i</div>
+      <div class="card">j</div>
+      <div class="card">k</div>
+      <div class="card">l</div>
+      <div class="card">main</div>
     </section>
-    </nav>
+    
+  </div>
+</div>
   </body>
 </html>
-<!--
-  
-  This is a comment. There is nothing here https://newcultureworkshop.space/ 
-
--->
