some more changes

--- a/root/index.html
+++ b/root/index.html
@@ -19,10 +19,12 @@
 
   <!-- Overlay content -->
   <div class="overlay-content">
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+    <a href="https://discord.com/channels/@me/984956875516805170"target="_blank">🎮 discord</a>
+    <a href="/projects">🏹 projects</a>
+    <a href="/people">⚜️ people</a>
+    <a href="/resources">⛏️ resources</a>
+    <a href="https://newcultureworkshop.video/">📽️ video</a>
+    <a href="/contact">👽 contact</a>
   </div>
 
 </div>
@@ -39,7 +41,7 @@
         <a href="/projects"><div class="card">🏹 projects</div></a>
         <a href="/people"><div class="card">⚜️ people</div></a>
         <a href="/resources"><div class="card">⛏️ resources</div></a>
-        <a href="https://newcultureworkshop.video/"target="_blank"><div class="card">📽️ video</div></a>
+        <a href="https://newcultureworkshop.video/"><div class="card">📽️ video</div></a>
         <a href="/contact"><div class="card">👽 contact</div></a>
       </section>
     </nav>
