--- a/root/projects.html
+++ b/root/projects.html
@@ -14,7 +14,7 @@
       <a href="/projects"><div class="card">🏹 projects</div></a>
       <a href="/people"><div class="card">⚜️ people</div></a>
       <a href="/resources"><div class="card">⛏️ resources</div></a>
-      <a href="https://newcultureworkshop.video/"target="_blank"><div class="card">📽️ video</div></a>
+      <a href="https://newcultureworkshop.video/"><div class="card">📽️ video</div></a>
       <a href="/contact"><div class="card">👽 contact</div></a>
     </section>
 </nav>
@@ -22,9 +22,10 @@
   <div style="display: inline-block; text-align: left;">
     <iframe style="overflow:hidden;border:0;margin:0;padding:0;width:50vw;height:30vh;" 
     src="https://docs.google.com/document/d/e/2PACX-1vSixpCI3qSJrD6FK3hu7L8TNO6jFOOzBnOOx4GeAT8tlfUbUQM-Vhl8I3JCZhvYtMuu3fiZb9sYBMA8/pub?embedded=true"></iframe>
-
+  </div>
+</div>
 <div style="text-align: center;">
-  <div style="display: inline-block; text-align: left;">
+
 <section class="thesections">
   <h1>Note:</h1>
 <p>🗒️ Thinking of putting projects here...</p>
@@ -39,7 +40,7 @@
 <h6>Note:</h5>
 <p>🗒️ Thinking of putting projects here...</p>
 </section>
-</div>
+
 </div>
 </body>
 </html>
