--- a/root/index.html
+++ b/root/index.html
@@ -24,6 +24,7 @@
         <a href="/resources"><div class="card">⛏️ resources</div></a>
         <a href="https://newcultureworkshop.video/"><div class="card">📽️ video</div></a>
         <a href="/contact"><div class="card">👽 contact</div></a>
+        <a href="/contact"><div class="card">📄 Docs</div></a>
       </section>
     </nav>
   </body>
