--- a/root/index.html
+++ b/root/index.html
@@ -24,7 +24,7 @@
         <a href="/resources"><div class="card">⛏️ resources</div></a>
         <a href="https://newcultureworkshop.video/"><div class="card">📽️ video</div></a>
         <a href="/contact"><div class="card">👽 contact</div></a>
-        <a href="/contact"><div class="card">📄 Docs</div></a>
+        <a href="https://docs.google.com/document/d/1zY2fe7yHqMgyxeBtEqt0HlMoGdXAXKF1HNk28NaKZ6o/edit?usp=sharing"><div class="card">📄 Docs</div></a>
       </section>
     </nav>
   </body>
