--- a/root/index.html
+++ b/root/index.html
@@ -18,12 +18,12 @@
 
     <nav>
       <section class="basic-grid">
+        <a href="https://newcultureworkshop.space/"><div class="card">🌀 Portal</div></a>
         <a href="https://discord.com/channels/@me/984956875516805170"target="_blank"><div class="card">🎮 discord</div></a>
         <a href="/projects"><div class="card">🏹 projects</div></a>
         <a href="/people"><div class="card">⚜️ people</div></a>
         <a href="/resources"><div class="card">⛏️ resources</div></a>
         <a href="https://newcultureworkshop.video/"><div class="card">📽️ video</div></a>
-        <a href="/contact"><div class="card">👽 contact</div></a>
         <a href="https://docs.google.com/document/d/1zY2fe7yHqMgyxeBtEqt0HlMoGdXAXKF1HNk28NaKZ6o/edit?usp=sharing"><div class="card">📄 Docs</div></a>
       </section>
     </nav>
